@@ -1,7 +1,23 @@
+FROM eclipse-temurin:17 as jre-build
 
-FROM ubuntu:20.04
+# Create a custom Java runtime
+RUN $JAVA_HOME/bin/jlink \
+         --add-modules ALL-MODULE-PATH \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output /javaruntime
 
-ARG SIMULATOR_VERSION="7.4.0.51"
+# Define base image and copy in jlink created minimal Java 17 environment
+FROM python:3.9.7-slim
+ENV JAVA_HOME=/opt/java/openjdk
+ENV PATH "${JAVA_HOME}/bin:${PATH}"
+COPY --from=jre-build /javaruntime $JAVA_HOME
+
+# now we have Java 17 and Python 3.9
+
+ARG SIMULATOR_VERSION="7.5.0.11"
 ARG MAX_JAVA_MEM=0
 # Make sure you don't sap all of docker's memory when you set this.
 ENV ENV_SIMULATOR_VERSION=$SIMULATOR_VERSION
@@ -32,10 +48,7 @@ LABEL \
     maintainer="BioSimulators Team <info@biosimulators.org>"
 
 RUN apt-get -y update
-RUN apt-get install -y --no-install-recommends curl openjdk-8-jre dnsutils
-RUN apt-get install -y python3.9 python3-pip python3.9-venv
-
-RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.8 20 && update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.9 40
+RUN apt-get install -y --no-install-recommends curl dnsutils
 
 RUN mkdir -p /usr/local/app/vcell/lib && \
     mkdir -p /usr/local/app/vcell/simulation && \
@@ -43,29 +56,11 @@ RUN mkdir -p /usr/local/app/vcell/lib && \
     mkdir -p /usr/local/app/vcell/installDir/python/vcell_cli_utils && \
     mkdir -p /usr/local/app/vcell/installDir/bionetgen
 
-# Install Poetry dependency
-#RUN curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python3 - && \
-#    echo export PATH="$HOME/.poetry/bin:$PATH" >> /etc/bash.bashrc
-RUN python3 -m pip install wheel fire biosimulators-utils seaborn deprecated python-libsbml-experimental pandas
 RUN python3 -m pip install poetry &&  poetry config cache-dir "/poetry/.cache"
-
 ENV PATH="/root/.poetry/bin:/root/.local/bin:$PATH"
 
 # Copy JAR files
-COPY ./vcell-client/target/vcell-client-0.0.1-SNAPSHOT.jar \
-     ./vcell-client/target/maven-jars/*.jar \
- 	 ./vcell-core/target/vcell-core-0.0.1-SNAPSHOT.jar \
-     ./vcell-core/target/maven-jars/*.jar \
- 	 ./vcell-server/target/vcell-server-0.0.1-SNAPSHOT.jar \
-     ./vcell-server/target/maven-jars/*.jar \
- 	 ./vcell-vmicro/target/vcell-vmicro-0.0.1-SNAPSHOT.jar \
-     ./vcell-vmicro/target/maven-jars/*.jar \
- 	 ./vcell-oracle/target/vcell-oracle-0.0.1-SNAPSHOT.jar \
-     ./vcell-oracle/target/maven-jars/*.jar \
-     ./vcell-admin/target/vcell-admin-0.0.1-SNAPSHOT.jar \
-     ./vcell-admin/target/vcell-admin-0.0.1-SNAPSHOT-tests.jar \
-     ./vcell-admin/target/maven-jars/*.jar \
-     ./vcell-cli/target/vcell-cli-0.0.1-SNAPSHOT.jar \
+COPY ./vcell-cli/target/vcell-cli-0.0.1-SNAPSHOT.jar \
      ./vcell-cli/target/maven-jars/*.jar \
      ./non-maven-java-libs/org/sbml/libcombine/libCombineLinux64/0.2.7/libCombineLinux64-0.2.7.jar \
      /usr/local/app/vcell/lib/
@@ -73,7 +68,9 @@ COPY ./vcell-client/target/vcell-client-0.0.1-SNAPSHOT.jar \
 # Install required python-packages
 COPY ./vcell-cli-utils/ /usr/local/app/vcell/installDir/python/vcell_cli_utils/
 RUN cd /usr/local/app/vcell/installDir/python/vcell_cli_utils/ && \
-     poetry config cache-dir "/poetry/.cache" --local && chmod 755 poetry.toml && poetry install
+    poetry config cache-dir "/poetry/.cache" --local && \
+    chmod 755 poetry.toml && \
+    poetry install
 
 # Add linux local solvers only
 ADD ./localsolvers /usr/local/app/vcell/installDir/localsolvers
